--- a/pt/All_broadcasts_IDs_extract.ipynb
+++ b/pt/All_broadcasts_IDs_extract.ipynb
@@ -126,7 +126,7 @@
     "import pandas as pd\n",
     "\n",
     "#Carrega variaveis de ambiente para parametrização\n",
-    "load_dotenv('/content/drive/MyDrive/Colab Notebooks/twitch_tcc/vars.env')\n"
+    "load_dotenv('vars.env')\n"
    ]
   },
   {
@@ -189,13 +189,13 @@
     "                              })\n",
     "#Cria o arquivo\n",
     "#Comentar esta linha com o \"mode=w\" caso re-utilize esse trecho de código, se não ira sobreescrever o que já foi processado\n",
-    "df_brocast.to_csv('/content/drive/MyDrive/Colab Notebooks/twitch_tcc/base_canais.csv', mode='w', sep=';', header=True)\n",
+    "df_brocast.to_csv('/db/base_canais.csv', mode='w', sep=';', header=True)\n",
     "for broadcaster_id in lista_broadcaster_id:\n",
     "  try:\n",
     "    resultado_consulta = twitch.get_channel_information(broadcaster_id=f'{broadcaster_id}')\n",
     "    if resultado_consulta['data'] != []:\n",
     "      data_resultado_consulta = pd.DataFrame(resultado_consulta['data'])\n",
-    "      data_resultado_consulta.to_csv('/content/drive/MyDrive/Colab Notebooks/twitch_tcc/db/base_canais.csv', mode='a', sep=';', header=False)\n",
+    "      data_resultado_consulta.to_csv('/db/base_canais.csv', mode='a', sep=';', header=False)\n",
     "  except:\n",
     "    print(f\"Não foi possível obter dados de: {broadcaster_id}\")"
    ]
