--- a/pt/All_broadcasts_IDs_extract.ipynb
+++ b/pt/All_broadcasts_IDs_extract.ipynb
@@ -175,7 +175,7 @@
     "#recomenda-se dividir o a lista de canais em arquivos menos para o processamento\n",
     "#O uso do google colab tem a limitação de 6 horas de tempo de execução, no entando após 3 horas de execução o ambiente verifica a inatividade\n",
     "#foi preciso rodar esse trecho mais de uma vez pois as vezes as consultas dão timeout depois de obter 100mil a 50mil registros\n",
-    "with open('/content/drive/MyDrive/Colab Notebooks/twitch_tcc/all_broadcaster_dict.txt', 'r') as f:\n",
+    "with open('/db/all_broadcaster_dict.txt', 'r') as f:\n",
     "    lista_broadcaster_id = [line.strip() for line in f]\n",
     "\n",
     "df_brocast = pd.DataFrame({'broadcaster_id': pd.Series(dtype='str'),\n",
