--- a/pt/Dados_TT.ipynb
+++ b/pt/Dados_TT.ipynb
@@ -108,7 +108,7 @@
    "source": [
     "#Consultar ids de top 2500 streams from Twitch Tracker\n",
     "#twitchtracker.com\n",
-    "ids_TT = pd.read_csv('/content/drive/MyDrive/Colab Notebooks/twitch_tcc/TT_get_users.csv', sep=';')['id'].tolist()\n",
+    "ids_TT = pd.read_csv('db/TT_get_users.csv', sep=';')['id'].tolist()\n",
     "\n",
     "#Obtendo IDs dos top 2500 streammers PT from Twitch Tracker\n",
     "df_brocast = pd.DataFrame({'broadcaster_id': pd.Series(dtype='str'),\n",
@@ -129,7 +129,7 @@
     "        print(f\"Não foi possivel consultar: {broadcaster_id}\")\n",
     "    if resultado_consulta['data'] != []:\n",
     "        data_resultado_consulta = pd.DataFrame(resultado_consulta['data'])\n",
-    "        data_resultado_consulta.to_csv('/content/drive/MyDrive/Colab Notebooks/twitch_tcc/TT_get_channels.csv', mode='a', header=False, sep=';', index=False)"
+    "        data_resultado_consulta.to_csv('db/TT_get_channels.csv', mode='a', header=False, sep=';', index=False)"
    ]
   }
  ],
