--- a/pt/Dados_TT.ipynb
+++ b/pt/Dados_TT.ipynb
@@ -79,7 +79,7 @@
    },
    "outputs": [],
    "source": [
-    "ids_TT = pd.read_csv('/content/drive/MyDrive/Colab Notebooks/twitch_tcc/TT_get_users.csv', sep=';')\n",
+    "ids_TT = pd.read_csv('db/TT_get_users.csv', sep=';')\n",
     "ids_TT.head()"
    ]
   },
@@ -120,7 +120,7 @@
     "                              'game_name': pd.Series(dtype='str'),\n",
     "                              'title': pd.Series(dtype='int'),\n",
     "                              })\n",
-    "df_schema.to_csv('/content/drive/MyDrive/Colab Notebooks/twitch_tcc/TT_get_channels.csv', mode='w', header=True, sep=\";\", index=False)\n",
+    "df_schema.to_csv('db/TT_get_channels.csv', mode='w', header=True, sep=\";\", index=False)\n",
     "\n",
     "for broadcaster_id in ids_TT:\n",
     "    try:\n",
