--- a/pt/tratar_base_canais.ipynb
+++ b/pt/tratar_base_canais.ipynb
@@ -78,7 +78,7 @@
     "import pandas as pd\n",
     "\n",
     "#Carrega variaveis de ambiente para parametrização\n",
-    "load_dotenv('/content/drive/MyDrive/Colab Notebooks/twitch_tcc/vars.env')\n",
+    "load_dotenv('vars.env')\n",
     "\n",
     "from twitchAPI.twitch import Twitch\n",
     "\n",
@@ -114,7 +114,7 @@
     "#No arquivo que gerei estava com sepador \",\" mas corrigi no script All_broadcasts_IDs_extract.ipynb\n",
     "#Com o separado \",\" gerou erros pois o titulo de algumas trammissões contiam  o caracter ','\n",
     "#para evitar este problema utilize o sepador \";\" para gerar o arquivo \"base_canais.csv\"\n",
-    "# CC_channels = pd.read_csv('/content/drive/MyDrive/Colab Notebooks/twitch_tcc/base_canais.csv', sep=';')\n",
+    "# CC_channels = pd.read_csv('db/base_canais.csv', sep=';')\n",
     "\n",
     "#Base gerada a partir da lista do clivecast\n",
     "CC_channels = pd.read_csv('/db/base_canais.csv', sep=',')\n",
