undo remove get_users

--- a/pt/Dados_TT.ipynb
+++ b/pt/Dados_TT.ipynb
@@ -25,6 +25,39 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Consultar ids de top 2500 streams from twitchtracker.com\n",
+    "nomes_streams_TT = pd.read_csv('db/twitch_tracker_streamm_names.csv', sep=',')['user_name'].tolist()\n",
+    "\n",
+    "#Obtendo IDs dos top 2500 streammers PT from Twitch Tracker\n",
+    "df_schema = pd.DataFrame({'id': pd.Series(dtype='str'),\n",
+    "                              'login': pd.Series(dtype='str'),\n",
+    "                              'display_name': pd.Series(dtype='str'),\n",
+    "                              'type': pd.Series(dtype='str'),\n",
+    "                              'broadcaster_type': pd.Series(dtype='str'),\n",
+    "                              'description': pd.Series(dtype='str'),\n",
+    "                              'profile_image_url': pd.Series(dtype='str'),\n",
+    "                              'offline_image_url': pd.Series(dtype='str'),\n",
+    "                              'view_count': pd.Series(dtype='int'),\n",
+    "                              'created_at': pd.Series(dtype='str'),\n",
+    "                              })\n",
+    "df_schema.to_csv('db/TT_get_users.csv', mode='w', header=True, sep=\";\", index=False)\n",
+    "\n",
+    "for nome_stream in nomes_streams_TT:\n",
+    "    try:\n",
+    "        resultado_consulta = twitch.get_users(logins=nome_stream)\n",
+    "    except:\n",
+    "        print(f\"Não foi possivel consultar: {nome_stream}\")\n",
+    "    if resultado_consulta['data'] != []:\n",
+    "        data_resultado_consulta = pd.DataFrame(resultado_consulta['data'])\n",
+    "        data_resultado_consulta.to_csv('db/TT_get_users.csv', mode='a', header=False, sep=';', index=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
