--- a/pt/tratar_base_canais.ipynb
+++ b/pt/tratar_base_canais.ipynb
@@ -123,7 +123,7 @@
     "\n",
     "#fonte: \"https://twitchtracker.com/channels/viewership/portuguese?page=\"\n",
     "#Base de dados do Site do Twitch Tracker top 2500 streammers em portugues extraido dia 29/01/2022\n",
-    "TT_channels = pd.read_csv('/db/TT_get_channels_tratado.csv', sep=';')\n",
+    "TT_channels = pd.read_csv('/db/TT_get_channels.csv', sep=';')\n",
     "\n",
     "\n",
     "\n",
