--- a/pt/preparacao_dados_twitch_bases_independentes.ipynb
+++ b/pt/preparacao_dados_twitch_bases_independentes.ipynb
@@ -255,6 +255,133 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 10,
+   "id": "6ee3262b-3a35-487c-bafd-897e5662ae0e",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>tag_id</th>\n",
+       "      <th>is_auto</th>\n",
+       "      <th>localization_names</th>\n",
+       "      <th>localization_descriptions</th>\n",
+       "      <th>broadcaster_id</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>39ee8140-901a-4762-bfca-8260dea1310f</td>\n",
+       "      <td>True</td>\n",
+       "      <td>Português</td>\n",
+       "      <td>Para transmissões que utilizam o idioma português.</td>\n",
+       "      <td>42642296</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>39ee8140-901a-4762-bfca-8260dea1310f</td>\n",
+       "      <td>True</td>\n",
+       "      <td>Português</td>\n",
+       "      <td>Para transmissões que utilizam o idioma português.</td>\n",
+       "      <td>62916113</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>988c8c1b-b991-4b66-9a6d-b36f60363f6d</td>\n",
+       "      <td>False</td>\n",
+       "      <td>Brasil</td>\n",
+       "      <td>Para transmissões e conteúdos com participação da comunidade brasileira</td>\n",
+       "      <td>29361707</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>e1a43486-eee5-4f36-9ee6-76e72af00180</td>\n",
+       "      <td>False</td>\n",
+       "      <td>Jogada de ranking</td>\n",
+       "      <td>Para transmissões focadas em competições em que o objetivo é atingir colocações em placares.</td>\n",
+       "      <td>29361707</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>e659959d-392f-44c5-83a5-fb959cdbaccc</td>\n",
+       "      <td>False</td>\n",
+       "      <td>100%</td>\n",
+       "      <td>Para transmissões focadas em completar jogos em 100%</td>\n",
+       "      <td>29361707</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                                 tag_id  is_auto localization_names  \\\n",
+       "0  39ee8140-901a-4762-bfca-8260dea1310f     True          Português   \n",
+       "1  39ee8140-901a-4762-bfca-8260dea1310f     True          Português   \n",
+       "2  988c8c1b-b991-4b66-9a6d-b36f60363f6d    False             Brasil   \n",
+       "3  e1a43486-eee5-4f36-9ee6-76e72af00180    False  Jogada de ranking   \n",
+       "4  e659959d-392f-44c5-83a5-fb959cdbaccc    False               100%   \n",
+       "\n",
+       "                                                                      localization_descriptions  \\\n",
+       "0                                            Para transmissões que utilizam o idioma português.   \n",
+       "1                                            Para transmissões que utilizam o idioma português.   \n",
+       "2                       Para transmissões e conteúdos com participação da comunidade brasileira   \n",
+       "3  Para transmissões focadas em competições em que o objetivo é atingir colocações em placares.   \n",
+       "4                                          Para transmissões focadas em completar jogos em 100%   \n",
+       "\n",
+       "   broadcaster_id  \n",
+       "0        42642296  \n",
+       "1        62916113  \n",
+       "2        29361707  \n",
+       "3        29361707  \n",
+       "4        29361707  "
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "qtd registros: 6121\n",
+      "qtd de tags unicas: 314\n",
+      "qtd registros unicos: 6121\n"
+     ]
+    }
+   ],
+   "source": [
+    "df_tags = pd.read_csv(f\"{path}canal_tags.csv\", sep=\";\")\n",
+    "display(df_tags.head(5))\n",
+    "print('qtd registros:', len(df_tags))\n",
+    "print(\"qtd de tags unicas:\", len(df_tags.localization_names.unique())) #há mais de 349 tags nessa base de dados\n",
+    "df_tags = df_tags.drop_duplicates() #tratar registros unicos\n",
+    "print('qtd registros unicos:', len(df_tags))\n",
+    "lista_tags = df_tags[[\"broadcaster_id\", \"localization_names\"]].drop_duplicates()\n",
+    "\n",
+    "lista_tags.to_csv(f'{path}base_independentes/user_tags.csv', mode='w', sep=\";\", header=True, index=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 27,
    "id": "bb8a4c3a",
    "metadata": {},
