--- a/pt/preparacao_dados_twitch_bases_independentes.ipynb
+++ b/pt/preparacao_dados_twitch_bases_independentes.ipynb
@@ -409,7 +409,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 12,
    "id": "162136d0",
    "metadata": {},
    "outputs": [
@@ -637,6 +637,7 @@
        "      <th>broadcaster_id</th>\n",
        "      <th>clip_game_id</th>\n",
        "      <th>clip_view_count</th>\n",
+       "      <th>clip_duration</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
@@ -645,42 +646,47 @@
        "      <td>75947497</td>\n",
        "      <td>116747788.0</td>\n",
        "      <td>91909</td>\n",
+       "      <td>30.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3013</th>\n",
        "      <td>75947497</td>\n",
        "      <td>116747788.0</td>\n",
        "      <td>62932</td>\n",
+       "      <td>30.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3014</th>\n",
        "      <td>75947497</td>\n",
        "      <td>116747788.0</td>\n",
        "      <td>51280</td>\n",
+       "      <td>59.9</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3015</th>\n",
        "      <td>75947497</td>\n",
        "      <td>116747788.0</td>\n",
        "      <td>33292</td>\n",
+       "      <td>30.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>52182</th>\n",
        "      <td>122675528</td>\n",
        "      <td>509658.0</td>\n",
        "      <td>32897</td>\n",
+       "      <td>42.9</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "       broadcaster_id  clip_game_id  clip_view_count\n",
-       "3012         75947497   116747788.0            91909\n",
-       "3013         75947497   116747788.0            62932\n",
-       "3014         75947497   116747788.0            51280\n",
-       "3015         75947497   116747788.0            33292\n",
-       "52182       122675528      509658.0            32897"
+       "       broadcaster_id  clip_game_id  clip_view_count  clip_duration\n",
+       "3012         75947497   116747788.0            91909           30.0\n",
+       "3013         75947497   116747788.0            62932           30.0\n",
+       "3014         75947497   116747788.0            51280           59.9\n",
+       "3015         75947497   116747788.0            33292           30.0\n",
+       "52182       122675528      509658.0            32897           42.9"
       ]
      },
      "metadata": {},
@@ -691,7 +697,7 @@
     "df_clips = pd.read_csv(f\"{path}clips_2022-05-20_a_2022-08-20.csv\", sep=\";\", encoding='iso-8859-1') #Os clips estão sem categoria (usar só max e média?)\n",
     "df_clips = df_clips.sort_values(by=['view_count'], ascending=False)\n",
     "display(df_clips.head(5))\n",
-    "df_clips = df_clips[['broadcaster_id', 'game_id', 'view_count']].rename(columns={\"game_id\": \"clip_game_id\", 'view_count': 'clip_view_count'})\n",
+    "df_clips = df_clips[['broadcaster_id', 'game_id', 'view_count', 'duration']].rename(columns={\"game_id\": \"clip_game_id\", 'view_count': 'clip_view_count', 'duration':'clip_duration'})\n",
     "display(df_clips.head(5))\n",
     "df_clips.to_csv(f'{path}base_independentes/clips_games.csv', mode='w', sep=\";\", header=True, index=False)"
    ]
